tests/neg/i2979.scala
object Main {
  Map(
    "a" -> Unknown(), // error
    "b" -> Unknown()  // error
  )
}
